# prominence

./: CMakeLists.txt  README.md
dem/: dem_filename_formatter.h  dem_grid.h  dem_processing.cpp  dem_processing.h  field_view.h  mapped_file.h
geomorphology/: geomorphology.cpp  geomorphology.h  ridge.h  ridge_calculator.h
lib/: CMakeLists.txt  bitfield.h  bitmask.h  common.h  converter.h  distance.h  index.cpp  index.h  logging.hpp
peaks/: passes_processing.h  peak.cpp  peak.h  peak_tree.hpp  peaks_processing.cpp  peaks_processing.h
peaks_on_dem_processing/: peaks_on_dem_processing.cpp  peaks_on_dem_processing.h
pipeline/: dem_pipeline.h  pipeline.h
prominence_calculation/: frontier_queue.h  isolation.cpp  peaks_collector.h  peaks_container.h  prominence_calculation.cpp  prominence_calculation.h  qtree.cpp  qtree.h  qtree_node.cpp  qtree_node.h  seed.h
tests/: distance_tests.h  tests.cpp
